[package]
name = "udss-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
nix = { version = "0.30.1", features = ["socket", "resource", "zerocopy", "net"] }
log = "0.4.27"
once_cell = "1.21.3"
env_logger = "0.11.8"
num_cpus = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
time = "0.3.41"
bytes = "1.10.1"
socket2 = "0.5.9"
httparse = "1.10.1"
memmem = "0.1.1"
rustls = "0.23.27"
tokio-rustls = "0.26.2"
rcgen = "0.12.0"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.0"
chrono = { version = "0.4.35", features = ["serde"] }
lru = "0.14.0"
libc = "0.2.172"
rayon = "1.10.0"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
humantime = "2.2.0"
regex = "1.9"
lazy_static = "1.4"
uuid = { version = "1.4", features = ["v4"] }

[profile.release]
opt-level = 3      # 최적화 수준
lto = "fat"        # Link Time Optimization
panic = 'abort'    # 패닉 시 프로그램 종료
codegen-units = 1  # 빌드 단위 최소화
strip = true       # 심볼 정보 제거
debug = false      # 디버그 정보 제거